--- a/source/scss/framework/framework.scss
+++ b/source/scss/framework/framework.scss
@@ -22,5 +22,5 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-@import "compass/reset";
-@import "framework/framework";
+@import "settings";
+@import "grid";
