Placing static files in the right location

--- a/jsConfirm/static/css/app.css
+++ b/jsConfirm/static/css/app.css
@@ -22,7 +22,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
-/* line 5, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -44,45 +44,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -110,7 +110,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
-/* line 1, ../../source/scss/framework/_grid.scss */
+/* line 1, ../../static_source/scss/framework/_grid.scss */
 .column, .columns {
   position: relative;
   padding-left: 0.94rem;
@@ -118,313 +118,313 @@ SOFTWARE.
   float: left;
 }
 
-/* line 8, ../../source/scss/framework/_grid.scss */
+/* line 8, ../../static_source/scss/framework/_grid.scss */
 .row {
   width: 100%;
   max-width: 62.5rem;
   clear: both;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-1 {
   width: 8.33333%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-2 {
   width: 16.66667%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-3 {
   width: 25%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-4 {
   width: 33.33333%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-5 {
   width: 41.66667%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-6 {
   width: 50%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-7 {
   width: 58.33333%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-8 {
   width: 66.66667%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-9 {
   width: 75%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-10 {
   width: 83.33333%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-11 {
   width: 91.66667%;
 }
 
-/* line 15, ../../source/scss/framework/_grid.scss */
+/* line 15, ../../static_source/scss/framework/_grid.scss */
 .small-12 {
   width: 100%;
 }
 
 @media only screen and (min-width: 40.0001rem, 64rem0 0.0001rem) {
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-1 {
     width: 8.33333%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-2 {
     width: 16.66667%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-3 {
     width: 25%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-4 {
     width: 33.33333%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-5 {
     width: 41.66667%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-6 {
     width: 50%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-7 {
     width: 58.33333%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-8 {
     width: 66.66667%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-9 {
     width: 75%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-10 {
     width: 83.33333%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-11 {
     width: 91.66667%;
   }
 
-  /* line 22, ../../source/scss/framework/_grid.scss */
+  /* line 22, ../../static_source/scss/framework/_grid.scss */
   .medium-12 {
     width: 100%;
   }
 }
 @media only screen and (min-width: lower-bound(64.0001rem, 90rem)) {
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-1 {
     width: 8.33333%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-2 {
     width: 16.66667%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-3 {
     width: 25%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-4 {
     width: 33.33333%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-5 {
     width: 41.66667%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-6 {
     width: 50%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-7 {
     width: 58.33333%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-8 {
     width: 66.66667%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-9 {
     width: 75%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-10 {
     width: 83.33333%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-11 {
     width: 91.66667%;
   }
 
-  /* line 30, ../../source/scss/framework/_grid.scss */
+  /* line 30, ../../static_source/scss/framework/_grid.scss */
   .large-12 {
     width: 100%;
   }
 }
 @media only screen and (min-width: lower-bound(90.0001rem, 120rem)) {
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-1 {
     width: 8.33333%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-2 {
     width: 16.66667%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-3 {
     width: 25%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-4 {
     width: 33.33333%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-5 {
     width: 41.66667%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-6 {
     width: 50%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-7 {
     width: 58.33333%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-8 {
     width: 66.66667%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-9 {
     width: 75%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-10 {
     width: 83.33333%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-11 {
     width: 91.66667%;
   }
 
-  /* line 38, ../../source/scss/framework/_grid.scss */
+  /* line 38, ../../static_source/scss/framework/_grid.scss */
   .xlarge-12 {
     width: 100%;
   }
 }
 @media only screen and (min-width: lower-bound(120.0001rem, 99999999rem)) {
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-1 {
     width: 8.33333%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-2 {
     width: 16.66667%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-3 {
     width: 25%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-4 {
     width: 33.33333%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-5 {
     width: 41.66667%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-6 {
     width: 50%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-7 {
     width: 58.33333%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-8 {
     width: 66.66667%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-9 {
     width: 75%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-10 {
     width: 83.33333%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-11 {
     width: 91.66667%;
   }
 
-  /* line 46, ../../source/scss/framework/_grid.scss */
+  /* line 46, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-12 {
     width: 100%;
   }
