--- a/jsConfirm/static_source/scss/framework/_settings.scss
+++ b/jsConfirm/static_source/scss/framework/_settings.scss
@@ -1,10 +1,60 @@
-/////////////////////////////////////
-//       jsConfirm Framework       //
-//         Custom settings         //
-//   Compatible with Foundation    //
-/////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////
+// The MIT License (MIT)                                                                  //
+//                                                                                        //
+// Copyright (C) 2015  Christopher Mejía Montoya - me@chrissmejia.com - chrissmejia.com   //
+//                                                                                        //
+// Permission is hereby granted, free of charge, to any person obtaining a copy           //
+// of this software and associated documentation files (the "Software"), to deal          //
+// in the Software without restriction, including without limitation the rights           //
+// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell              //
+// copies of the Software, and to permit persons to whom the Software is                  //
+// furnished to do so, subject to the following conditions:                               //
+//                                                                                        //
+// The above copyright notice and this permission notice shall be included in all         //
+// copies or substantial portions of the Software.                                        //
+//                                                                                        //
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR             //
+// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,               //
+// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE            //
+// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER                 //
+// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,          //
+// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE          //
+// SOFTWARE.                                                                              //
+////////////////////////////////////////////////////////////////////////////////////////////
+
+// - - - - - - - - - - - - - - - - - - - - - - - - -
+// General
+// - - - - - - - - - - - - - - - - - - - - - - - - -
 
 $grid-columns: 12;
+
+@import "compass/css3/font-face";
+
+@include font-face(
+    "Proxima Nova", 
+    inline-font-files(
+        "proximanova-regular-webfont.woff",
+        "proximanova-regular-webfont.ttf", 
+        "proximanova-regular-webfont.svg"
+    ), 
+    "proximanova-regular-webfont.eot",
+    normal, // font-weight
+    normal  // font-style
+);
+
+@include font-face(
+    "Proxima Nova Semibold", 
+    inline-font-files(
+        "proximanova-semibold-webfont.woff",
+        "proximanova-semibold-webfont.ttf", 
+        "proximanova-semibold-webfont.svg"
+    ), 
+    "proximanova-semibold-webfont.eot",
+    semibold, // font-weight
+    normal  // font-style
+);
+
+$font-family: "Proxima Nova", Helvetica, sans-serif;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 // Media Query Ranges
