Gallery interface update

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -5,6 +5,76 @@
 
 {% block content %}
   <div id="gallery">
-    <h2>Gallery</h2>
+    <div class="row">
+      <h2>Gallery</h2>
+      <div class="small-12 medium-6 large-4 columns">
+        <div class="picture">
+          <img src="{% static 'img/gallery/pic1.jpg' %}" alt="Picture 1">
+          <div class="description small-12 large-8 columns">
+            <h2>The image 1</h2>
+          </div>
+          <div class="buttons small-12 large-4 columns">
+            <a href="#"><div class="heart"></div> 8</a>
+            <a href="#">Delete</a>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-6 large-4 columns">
+        <div class="picture">
+          <img src="{% static 'img/gallery/pic2.jpg' %}" alt="Picture 2">
+          <div class="description small-12 large-8 columns">
+            <h2>The image 2</h2>
+          </div>
+          <div class="buttons small-12 large-4 columns">
+            <h2>IMG 1</h2>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-6 large-4 columns">
+        <div class="picture">
+          <img src="{% static 'img/gallery/pic3.jpg' %}" alt="Picture 3">
+          <div class="description small-12 large-8 columns">
+            <h2>The image 3</h2>
+          </div>
+          <div class="buttons small-12 large-4 columns">
+            <h2>IMG 1</h2>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-6 large-4 columns">
+        <div class="picture">
+          <img src="{% static 'img/gallery/pic4.jpg' %}" alt="Picture 4">
+          <div class="description small-12 large-8 columns">
+            <h2>The image 4</h2>
+          </div>
+          <div class="buttons small-12 large-4 columns">
+            <h2>IMG 1</h2>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-6 large-4 columns">
+        <div class="picture">
+          <img src="{% static 'img/gallery/pic5.jpg' %}" alt="Picture 5">
+          <div class="description small-12 large-8 columns">
+            <h2>The image 5</h2>
+          </div>
+          <div class="buttons small-12 large-4 columns">
+            <h2>IMG 1</h2>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-6 large-4 columns">
+        <div class="picture">
+          <img src="{% static 'img/gallery/pic6.jpg' %}" alt="Picture 6">
+          <div class="description small-12 large-8 columns">
+            <h2>The image 6</h2>
+          </div>
+          <div class="buttons small-12 large-4 columns">
+            <h2>IMG 1</h2>
+          </div>
+        </div>
+      </div>
+    <h4 class="text-center">Images courtesy of https://stocksnap.io/</h4>
+    </div>
   </div>
 {% endblock %}
