--- a/jsConfirm/static_source/scss/web/_settings.scss
+++ b/jsConfirm/static_source/scss/web/_settings.scss
@@ -23,5 +23,8 @@
 ////////////////////////////////////////////////////////////////////////////////////////////
 
 $index-color: #4299D4;
+$gallery-color: #A5B3BC;
 
 $clear-gray: #EBEBEB;
+
+$white: #fff;
