--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
   </div>
 </footer>
 
-<script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/jsConfirm.min.js' %}"></script>
 {% block javascript %}{% endblock %}
 </body>
 </html>
