--- a/jsConfirm/static/css/app.css
+++ b/jsConfirm/static/css/app.css
@@ -127,9 +127,10 @@ SOFTWARE.
 /* line 25, ../../static_source/scss/framework/_general.scss */
 * {
   -webkit-font-smoothing: subpixel-antialiased;
+  box-sizing: border-box;
 }
 
-/* line 29, ../../static_source/scss/framework/_general.scss */
+/* line 30, ../../static_source/scss/framework/_general.scss */
 body {
   font-family: "Proxima Nova", Helvetica, sans-serif;
 }
@@ -146,310 +147,319 @@ body {
 .row {
   width: 100%;
   max-width: 62.5rem;
-  clear: both;
   margin: 0 auto;
 }
+/* line 13, ../../static_source/scss/framework/_grid.scss */
+.row .row {
+  margin: 0 -0.94rem;
+}
+/* line 17, ../../static_source/scss/framework/_grid.scss */
+.row :after {
+  clear: both;
+  content: " ";
+  display: table;
+}
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-1 {
   width: 8.33333%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-2 {
   width: 16.66667%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-3 {
   width: 25%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-4 {
   width: 33.33333%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-5 {
   width: 41.66667%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-6 {
   width: 50%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-7 {
   width: 58.33333%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-8 {
   width: 66.66667%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-9 {
   width: 75%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-10 {
   width: 83.33333%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-11 {
   width: 91.66667%;
 }
 
-/* line 16, ../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../static_source/scss/framework/_grid.scss */
 .small-12 {
   width: 100%;
 }
 
-@media only screen and (min-width: 40.0001rem, 64rem0 0.0001rem) {
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 40.0001rem) {
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-1 {
     width: 8.33333%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-2 {
     width: 16.66667%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-3 {
     width: 25%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-4 {
     width: 33.33333%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-5 {
     width: 41.66667%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-6 {
     width: 50%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-7 {
     width: 58.33333%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-8 {
     width: 66.66667%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-9 {
     width: 75%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-10 {
     width: 83.33333%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-11 {
     width: 91.66667%;
   }
 
-  /* line 23, ../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../static_source/scss/framework/_grid.scss */
   .medium-12 {
     width: 100%;
   }
 }
-@media only screen and (min-width: lower-bound(64.0001rem, 90rem)) {
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 64.0001rem) {
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-1 {
     width: 8.33333%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-2 {
     width: 16.66667%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-3 {
     width: 25%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-4 {
     width: 33.33333%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-5 {
     width: 41.66667%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-6 {
     width: 50%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-7 {
     width: 58.33333%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-8 {
     width: 66.66667%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-9 {
     width: 75%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-10 {
     width: 83.33333%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-11 {
     width: 91.66667%;
   }
 
-  /* line 31, ../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../static_source/scss/framework/_grid.scss */
   .large-12 {
     width: 100%;
   }
 }
-@media only screen and (min-width: lower-bound(90.0001rem, 120rem)) {
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 90.0001rem) {
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-1 {
     width: 8.33333%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-2 {
     width: 16.66667%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-3 {
     width: 25%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-4 {
     width: 33.33333%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-5 {
     width: 41.66667%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-6 {
     width: 50%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-7 {
     width: 58.33333%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-8 {
     width: 66.66667%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-9 {
     width: 75%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-10 {
     width: 83.33333%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-11 {
     width: 91.66667%;
   }
 
-  /* line 39, ../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../static_source/scss/framework/_grid.scss */
   .xlarge-12 {
     width: 100%;
   }
 }
-@media only screen and (min-width: lower-bound(120.0001rem, 99999999rem)) {
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 120.0001rem) {
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-1 {
     width: 8.33333%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-2 {
     width: 16.66667%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-3 {
     width: 25%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-4 {
     width: 33.33333%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-5 {
     width: 41.66667%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-6 {
     width: 50%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-7 {
     width: 58.33333%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-8 {
     width: 66.66667%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-9 {
     width: 75%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-10 {
     width: 83.33333%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-11 {
     width: 91.66667%;
   }
 
-  /* line 47, ../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../static_source/scss/framework/_grid.scss */
   .xxlarge-12 {
     width: 100%;
   }
@@ -534,4 +544,81 @@ footer .logo {
   position: absolute;
   height: 100%;
   width: 100%;
+}
+
+/* line 25, ../../static_source/scss/web/_gallery.scss */
+#gallery {
+  padding: 4rem 0;
+  background: #A5B3BC;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+/* line 32, ../../static_source/scss/web/_gallery.scss */
+#gallery .picture {
+  background: #fff;
+  margin: 1rem 0.2rem;
+}
+/* line 37, ../../static_source/scss/web/_gallery.scss */
+#gallery .picture img {
+  width: 100%;
+  padding: 0.2rem 0.2rem 0 0.2rem;
+}
+/* line 42, ../../static_source/scss/web/_gallery.scss */
+#gallery .picture .description {
+  margin: 1.5rem 0;
+}
+/* line 46, ../../static_source/scss/web/_gallery.scss */
+#gallery .picture .buttons {
+  padding: 0;
+}
+/* line 49, ../../static_source/scss/web/_gallery.scss */
+#gallery .picture .buttons a {
+  width: 100%;
+  text-align: center;
+  display: block;
+  padding: 0.4rem 0;
+}
+/* line 63, ../../static_source/scss/web/_gallery.scss */
+#gallery .heart {
+  position: relative;
+  width: 1.25rem;
+  height: 1.125rem;
+  display: inline-block;
+}
+/* line 69, ../../static_source/scss/web/_gallery.scss */
+#gallery .heart:before, #gallery .heart:after {
+  position: absolute;
+  content: "";
+  left: 0.625rem;
+  top: 0;
+  width: 0.625rem;
+  height: 1.0125rem;
+  background: red;
+  -moz-border-radius: 0.625rem 0.625rem 0 0;
+  border-radius: 0.625rem 0.625rem 0 0;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0 100%;
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  -o-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+/* line 92, ../../static_source/scss/web/_gallery.scss */
+#gallery .heart:after {
+  left: 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  -o-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
 }
