--- a/jsConfirm/static/css/framework/framework.css
+++ b/jsConfirm/static/css/framework/framework.css
@@ -39,9 +39,10 @@ SOFTWARE.
 /* line 25, ../../../static_source/scss/framework/_general.scss */
 * {
   -webkit-font-smoothing: subpixel-antialiased;
+  box-sizing: border-box;
 }
 
-/* line 29, ../../../static_source/scss/framework/_general.scss */
+/* line 30, ../../../static_source/scss/framework/_general.scss */
 body {
   font-family: "Proxima Nova", Helvetica, sans-serif;
 }
@@ -58,310 +59,319 @@ body {
 .row {
   width: 100%;
   max-width: 62.5rem;
-  clear: both;
   margin: 0 auto;
 }
+/* line 13, ../../../static_source/scss/framework/_grid.scss */
+.row .row {
+  margin: 0 -0.94rem;
+}
+/* line 17, ../../../static_source/scss/framework/_grid.scss */
+.row :after {
+  clear: both;
+  content: " ";
+  display: table;
+}
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-1 {
   width: 8.33333%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-2 {
   width: 16.66667%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-3 {
   width: 25%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-4 {
   width: 33.33333%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-5 {
   width: 41.66667%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-6 {
   width: 50%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-7 {
   width: 58.33333%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-8 {
   width: 66.66667%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-9 {
   width: 75%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-10 {
   width: 83.33333%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-11 {
   width: 91.66667%;
 }
 
-/* line 16, ../../../static_source/scss/framework/_grid.scss */
+/* line 25, ../../../static_source/scss/framework/_grid.scss */
 .small-12 {
   width: 100%;
 }
 
-@media only screen and (min-width: 40.0001rem, 64rem0 0.0001rem) {
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 40.0001rem) {
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-1 {
     width: 8.33333%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-2 {
     width: 16.66667%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-3 {
     width: 25%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-4 {
     width: 33.33333%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-5 {
     width: 41.66667%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-6 {
     width: 50%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-7 {
     width: 58.33333%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-8 {
     width: 66.66667%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-9 {
     width: 75%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-10 {
     width: 83.33333%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-11 {
     width: 91.66667%;
   }
 
-  /* line 23, ../../../static_source/scss/framework/_grid.scss */
+  /* line 32, ../../../static_source/scss/framework/_grid.scss */
   .medium-12 {
     width: 100%;
   }
 }
-@media only screen and (min-width: lower-bound(64.0001rem, 90rem)) {
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 64.0001rem) {
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-1 {
     width: 8.33333%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-2 {
     width: 16.66667%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-3 {
     width: 25%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-4 {
     width: 33.33333%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-5 {
     width: 41.66667%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-6 {
     width: 50%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-7 {
     width: 58.33333%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-8 {
     width: 66.66667%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-9 {
     width: 75%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-10 {
     width: 83.33333%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-11 {
     width: 91.66667%;
   }
 
-  /* line 31, ../../../static_source/scss/framework/_grid.scss */
+  /* line 40, ../../../static_source/scss/framework/_grid.scss */
   .large-12 {
     width: 100%;
   }
 }
-@media only screen and (min-width: lower-bound(90.0001rem, 120rem)) {
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 90.0001rem) {
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-1 {
     width: 8.33333%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-2 {
     width: 16.66667%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-3 {
     width: 25%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-4 {
     width: 33.33333%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-5 {
     width: 41.66667%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-6 {
     width: 50%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-7 {
     width: 58.33333%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-8 {
     width: 66.66667%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-9 {
     width: 75%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-10 {
     width: 83.33333%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-11 {
     width: 91.66667%;
   }
 
-  /* line 39, ../../../static_source/scss/framework/_grid.scss */
+  /* line 48, ../../../static_source/scss/framework/_grid.scss */
   .xlarge-12 {
     width: 100%;
   }
 }
-@media only screen and (min-width: lower-bound(120.0001rem, 99999999rem)) {
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+@media only screen and (min-width: 120.0001rem) {
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-1 {
     width: 8.33333%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-2 {
     width: 16.66667%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-3 {
     width: 25%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-4 {
     width: 33.33333%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-5 {
     width: 41.66667%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-6 {
     width: 50%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-7 {
     width: 58.33333%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-8 {
     width: 66.66667%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-9 {
     width: 75%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-10 {
     width: 83.33333%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-11 {
     width: 91.66667%;
   }
 
-  /* line 47, ../../../static_source/scss/framework/_grid.scss */
+  /* line 56, ../../../static_source/scss/framework/_grid.scss */
   .xxlarge-12 {
     width: 100%;
   }
