--- a/jsConfirm/static_source/scss/framework/_settings.scss
+++ b/jsConfirm/static_source/scss/framework/_settings.scss
@@ -73,28 +73,22 @@ $large-startpoint:  $medium-breakpoint  + $breakpoint-bound;
 $xlarge-startpoint: $large-breakpoint  + $breakpoint-bound;
 $xxlarge-startpoint: $xlarge-breakpoint  + $breakpoint-bound;
 
-$small-range:   ($small-startpoint, $small-breakpoint);
-$medium-range:  ($medium-startpoint, $medium-breakpoint);
-$large-range:   ($large-startpoint, $large-breakpoint);
-$xlarge-range:  ($xlarge-startpoint, $xlarge-breakpoint);
-$xxlarge-range: ($xxlarge-startpoint, 99999999rem);
-
 $screen: "only screen";
 
 $small-up: $screen;
-$small-only: "#{$screen} and (max-width: #{$small-range})";
+$small-only: "#{$screen} and (max-width: #{$small-startpoint})";
 
-$medium-up: "#{$screen} and (min-width:#{$medium-range + $breakpoint-bound})";
-$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
+$medium-up: "#{$screen} and (min-width:#{$medium-startpoint})";
+$medium-only: "#{$screen} and (min-width:#{$medium-startpoint}) and (max-width:#$medium-breakpoint})";
 
-$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
-$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
+$large-up: "#{$screen} and (min-width:#{$large-startpoint})";
+$large-only: "#{$screen} and (min-width:#{$large-startpoint}) and (max-width:#{$large-breakpoint})";
 
-$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
-$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
+$xlarge-up: "#{$screen} and (min-width:#{$xlarge-startpoint})";
+$xlarge-only: "#{$screen} and (min-width:#{$xlarge-startpoint}) and (max-width:#{$xlarge-breakpoint})";
 
-$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
-$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
+$xxlarge-up: "#{$screen} and (min-width:#{$xxlarge-startpoint})";
+$xxlarge-only: "#{$screen} and (min-width:#{$xxlarge-startpoint}) and (max-width:999999rem)";
 
 $retina: (
     "#{$screen} and (-webkit-min-device-pixel-ratio: 2)",
