--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -14,8 +14,8 @@
             <h2>The image 1</h2>
           </div>
           <div class="buttons small-12 large-4 columns">
-            <a href="#"><div class="heart"></div> 8</a>
-            <a href="#">Delete</a>
+            <a class="delete$ 2" href="#"><div class="heart"></div> 8</a>
+            <a class="delete" href="#">Delete</a>
           </div>
         </div>
       </div>
