Modal window frontend

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -77,4 +77,18 @@
     <h4 class="text-center">Images courtesy of https://stocksnap.io/</h4>
     </div>
   </div>
+
+  <div id="jsConfirm">
+    <div class="title row">
+      <h1>Delete Image</h1>
+    </div>
+    <div class="description row text-center">
+      <h1>Are you sure you want to delete <span>iPhone5S.jpg</span>?</h1>
+    </div>
+    <div class="buttons row">
+      <a id="jsConfirmCancel" class="text-center" href="#">Cancel</a><a id="jsConfirmProceed" class="text-center" href="#">Delete file</a>
+    </div>
+  </div>
+  <div id="jsConfirmBackground"></div>
+
 {% endblock %}
