--- a/jsConfirm/static/css/framework/framework.css
+++ b/jsConfirm/static/css/framework/framework.css
@@ -47,6 +47,11 @@ body {
   font-family: "Proxima Nova", Helvetica, sans-serif;
 }
 
+/* line 34, ../../../static_source/scss/framework/_general.scss */
+a {
+  text-decoration: none;
+}
+
 /* line 1, ../../../static_source/scss/framework/_grid.scss */
 .column, .columns {
   position: relative;
