--- a/jsConfirm/static_source/scss/jsConfirm/_core.scss
+++ b/jsConfirm/static_source/scss/jsConfirm/_core.scss
@@ -22,7 +22,58 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-@import "compass/reset";
-@import "framework/framework";
-@import "web/web";
-@import "jsConfirm/jsConfirm";
+@import "compass/css3/border-radius";
+
+
+#jsConfirmBackground {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0.6;
+    background: $black;
+    z-index: 100000000;
+}
+
+#jsConfirm {
+    position: relative;	
+    width: 24.8rem;
+    top: 8rem;
+    margin: 0 auto;
+    background: $white;
+    z-index: 100000000000;
+    border: 0.1rem solid $window-border-color;
+    @include border-radius(0.2rem);
+
+    .title {
+        padding: 1.2rem 2rem;
+    }
+
+    .description {
+	    color: $gray;
+	    padding: 3rem 0; 
+	    padding-bottom: 3rem;
+	    border-top: 0.1rem solid $inner-border-color;
+	    border-bottom: 0.1rem solid $inner-border-color;
+
+	    span {
+	        display: inline-block;
+	        font-family: "Proxima Nova Semibold";
+	    }
+    }
+
+    .buttons {
+        a {
+            width: 50%;
+            display: inline-block;
+            font-size: 0.875rem;
+    	    color: $gray;
+        }
+
+        #jsConfirmProceed {
+            color: $red;
+            border-left: 0.1rem solid $inner-border-color;
+            padding: 1.4rem 0;
+        }
+    }
+}
