Adding show effect

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <div id="jsConfirm">
+  <div id="jsConfirm" class="transition">
     <div class="title row">
       <h1>Delete Image</h1>
     </div>
@@ -89,6 +89,6 @@
       <a id="jsConfirmCancel" class="text-center" href="#">Cancel</a><a id="jsConfirmProceed" class="text-center" href="#">Delete file</a>
     </div>
   </div>
-  <div id="jsConfirmBackground"></div>
+  <div id="jsConfirmBackground" class="transition"></div>
 
 {% endblock %}
