--- a/jsConfirm/static/css/jsConfirm/jsConfirm.css
+++ b/jsConfirm/static/css/jsConfirm/jsConfirm.css
@@ -51,16 +51,22 @@ SOFTWARE.
   width: 100%;
   height: 100%;
   top: 0;
-  opacity: 0.6;
   background: #000;
   z-index: 100000000;
+  opacity: 0;
+  visibility: hidden;
+}
+/* line 38, ../../../static_source/scss/jsConfirm/_core.scss */
+#jsConfirmBackground.show {
+  opacity: 0.6;
+  visibility: visible;
 }
 
-/* line 38, ../../../static_source/scss/jsConfirm/_core.scss */
+/* line 44, ../../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm {
   position: relative;
   width: 24.8rem;
-  top: 8rem;
+  top: -30rem;
   margin: 0 auto;
   background: #fff;
   z-index: 100000000000;
@@ -69,11 +75,11 @@ SOFTWARE.
   -webkit-border-radius: 0.2rem;
   border-radius: 0.2rem;
 }
-/* line 48, ../../../static_source/scss/jsConfirm/_core.scss */
+/* line 54, ../../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .title {
   padding: 1.2rem 2rem;
 }
-/* line 52, ../../../static_source/scss/jsConfirm/_core.scss */
+/* line 58, ../../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .description {
   color: #494C4C;
   padding: 3rem 0;
@@ -81,19 +87,19 @@ SOFTWARE.
   border-top: 0.1rem solid #C4CACC;
   border-bottom: 0.1rem solid #C4CACC;
 }
-/* line 59, ../../../static_source/scss/jsConfirm/_core.scss */
+/* line 65, ../../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .description span {
   display: inline-block;
   font-family: "Proxima Nova Semibold";
 }
-/* line 66, ../../../static_source/scss/jsConfirm/_core.scss */
+/* line 72, ../../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .buttons a {
   width: 50%;
   display: inline-block;
   font-size: 0.875rem;
   color: #494C4C;
 }
-/* line 73, ../../../static_source/scss/jsConfirm/_core.scss */
+/* line 79, ../../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .buttons #jsConfirmProceed {
   color: #E34F4F;
   border-left: 0.1rem solid #C4CACC;
