--- a/jsConfirm/static_source/scss/jsConfirm/_core.scss
+++ b/jsConfirm/static_source/scss/jsConfirm/_core.scss
@@ -30,15 +30,21 @@ SOFTWARE.
     width: 100%;
     height: 100%;
     top: 0;
-    opacity: 0.6;
     background: $black;
     z-index: 100000000;
+    opacity: 0;
+    visibility: hidden;
+
+    &.show {
+        opacity: 0.6;
+        visibility: visible;
+    }
 }
 
 #jsConfirm {
     position: relative;	
     width: 24.8rem;
-    top: 8rem;
+    top: -30rem;
     margin: 0 auto;
     background: $white;
     z-index: 100000000000;
