--- a/jsConfirm/static_source/scss/jsConfirm/_core.scss
+++ b/jsConfirm/static_source/scss/jsConfirm/_core.scss
@@ -52,6 +52,15 @@ SOFTWARE.
 
     .title {
         padding: 1.2rem 2rem;
+
+        .jsConfirmClose.icon {
+    	    color: $gray; 
+	        font-family: "Proxima Nova Semibold";
+	        @include import-image('close.png', 4rem, 3.4rem, 12.5%);
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
     }
 
     .description {
