Coding _getChildByClasses helper

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -81,7 +81,7 @@
   <div id="jsConfirm" class="transition">
     <div class="title row">
       <a class="jsConfirmClose icon right" href="#"></a>
-      <h1>Delete Image</h1>
+      <h1 class="text">Delete Image</h1>
     </div>
     <div class="description row text-center">
       <h1>Are you sure you want to delete <span>iPhone5S.jpg</span>?</h1>
