Adding Optional parameters and droping legacy _getChildByClass support < ie9

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -87,7 +87,7 @@
       <h1>Are you sure you want to delete <span>iPhone5S.jpg</span>?</h1>
     </div>
     <div class="buttons row">
-      <a id="jsConfirmCancel" class="jsConfirmClose text-center" href="#">Cancel</a><a id="jsConfirmProceed" class="text-center" href="#">Delete file</a>
+      <a id="jsConfirmCancel" class="cancel jsConfirmClose text-center" href="#">Cancel</a><a id="jsConfirmProceed" class="proceed text-center" href="#">Delete file</a>
     </div>
   </div>
   <div id="jsConfirmBackground" class="jsConfirmClose transition"></div>
