--- a/jsConfirm/static_source/scss/jsConfirm/_core.scss
+++ b/jsConfirm/static_source/scss/jsConfirm/_core.scss
@@ -84,7 +84,7 @@ SOFTWARE.
     	    color: $gray;
         }
 
-        #jsConfirmProceed {
+        .proceed {
             color: $red;
             border-left: 0.1rem solid $inner-border-color;
             padding: 1.4rem 0;
